--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-dscs
+
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>MERN ETHNUS REACT TASKS</h1>
+        <p class="lead">Dive into my tasks below:</p>
+        <table class="project-table">
+            <thead>
+              <tr>
+                <th>Task Name</th>
+                <th>GitHub Link</th>
+                <th>Deployment Link</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>TASK 1</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_1" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://word-counter-mohit.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>TASK 2</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_2" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://calculator-mohit-4051.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>TASK 3</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_3" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://color-picker-mohit.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>TASK 4</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_4" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://react-task4.shrishail.info/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>TASK 5</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_5" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://age-calculator-mohit.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>TASK 6</td>
+                <td>
+                  <a href="https://github.com/shrishail356/MERN_REACT_TASKS/REACT_TASK_6" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">GitHub</button>
+                  </a>
+                </td>
+                <td>
+                  <a href="https://portfolio-mohit-jain.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <button class="link-button btn-custom">Deployment</button>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+       
+    </div>
+  
+</body>
+</html>
